{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 282,
  "lineage": "c3f5141b-b91d-3b5a-71f4-35fae9b9fe90",
  "resources": [
    {
      "module": "module.instances[\"cart\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:563336977955:instance/i-07c358e34fcdac276",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07c358e34fcdac276",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-041c1f655644e90b2"
              }
            ],
            "primary_network_interface_id": "eni-041c1f655644e90b2",
            "private_dns": "ip-172-31-92-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.92.51",
            "public_dns": "ec2-44-204-177-46.compute-1.amazonaws.com",
            "public_ip": "44.204.177.46",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eab7947d2a5eac27",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "cart"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036c550880311293e",
            "tags": {
              "Name": "cart"
            },
            "tags_all": {
              "Name": "cart"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0594b5d3987fb72d3"
            ]
          },
          "dependencies": [
            "module.instances.aws_security_group.sg",
            "module.instances.data.aws_ami.rhel9_devops"
          ]
        }
      ]
    },
    {
      "module": "module.instances[\"cart\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563336977955:security-group/sg-0594b5d3987fb72d3",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0594b5d3987fb72d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "cart",
            "name_prefix": "",
            "owner_id": "563336977955",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cart"
            },
            "tags_all": {
              "Name": "cart"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa8966cac1291480"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instances[\"catalogue\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:563336977955:instance/i-0110bcf97261e661f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0110bcf97261e661f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01aaaf3059211a2c0"
              }
            ],
            "primary_network_interface_id": "eni-01aaaf3059211a2c0",
            "private_dns": "ip-172-31-83-45.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.83.45",
            "public_dns": "ec2-54-161-163-215.compute-1.amazonaws.com",
            "public_ip": "54.161.163.215",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cefbdee7221304ef",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "catalogue"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036c550880311293e",
            "tags": {
              "Name": "catalogue"
            },
            "tags_all": {
              "Name": "catalogue"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-081f88864c85ee9bb"
            ]
          },
          "dependencies": [
            "module.instances.aws_security_group.sg",
            "module.instances.data.aws_ami.rhel9_devops"
          ]
        }
      ]
    },
    {
      "module": "module.instances[\"catalogue\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563336977955:security-group/sg-081f88864c85ee9bb",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081f88864c85ee9bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "catalogue",
            "name_prefix": "",
            "owner_id": "563336977955",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "catalogue"
            },
            "tags_all": {
              "Name": "catalogue"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa8966cac1291480"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instances[\"dispatch\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:563336977955:instance/i-0d2e289a02961ae78",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2e289a02961ae78",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02c3898174083b48c"
              }
            ],
            "primary_network_interface_id": "eni-02c3898174083b48c",
            "private_dns": "ip-172-31-85-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.85.119",
            "public_dns": "ec2-3-89-195-242.compute-1.amazonaws.com",
            "public_ip": "3.89.195.242",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05acf5c91fa60488e",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dispatch"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036c550880311293e",
            "tags": {
              "Name": "dispatch"
            },
            "tags_all": {
              "Name": "dispatch"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fb22fa808410f234"
            ]
          },
          "dependencies": [
            "module.instances.aws_security_group.sg",
            "module.instances.data.aws_ami.rhel9_devops"
          ]
        }
      ]
    },
    {
      "module": "module.instances[\"dispatch\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563336977955:security-group/sg-0fb22fa808410f234",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb22fa808410f234",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dispatch",
            "name_prefix": "",
            "owner_id": "563336977955",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dispatch"
            },
            "tags_all": {
              "Name": "dispatch"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa8966cac1291480"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instances[\"frontend\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:563336977955:instance/i-08145132b8aeafd7f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08145132b8aeafd7f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-032898c03a5116bde"
              }
            ],
            "primary_network_interface_id": "eni-032898c03a5116bde",
            "private_dns": "ip-172-31-89-163.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.89.163",
            "public_dns": "ec2-18-206-247-29.compute-1.amazonaws.com",
            "public_ip": "18.206.247.29",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-019604fd24b228415",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "frontend"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036c550880311293e",
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05764db82cc137cd5"
            ]
          },
          "dependencies": [
            "module.instances.aws_security_group.sg",
            "module.instances.data.aws_ami.rhel9_devops"
          ]
        }
      ]
    },
    {
      "module": "module.instances[\"frontend\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563336977955:security-group/sg-05764db82cc137cd5",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05764db82cc137cd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "frontend",
            "name_prefix": "",
            "owner_id": "563336977955",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend"
            },
            "tags_all": {
              "Name": "frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa8966cac1291480"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instances[\"mongodb\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:563336977955:instance/i-0cca04f0942084a43",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cca04f0942084a43",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00b872d9ca3eea386"
              }
            ],
            "primary_network_interface_id": "eni-00b872d9ca3eea386",
            "private_dns": "ip-172-31-87-202.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.87.202",
            "public_dns": "ec2-3-88-130-121.compute-1.amazonaws.com",
            "public_ip": "3.88.130.121",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d2a84407789c5577",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "mongodb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036c550880311293e",
            "tags": {
              "Name": "mongodb"
            },
            "tags_all": {
              "Name": "mongodb"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09b5724e7211b2455"
            ]
          },
          "dependencies": [
            "module.instances.aws_security_group.sg",
            "module.instances.data.aws_ami.rhel9_devops"
          ]
        }
      ]
    },
    {
      "module": "module.instances[\"mongodb\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563336977955:security-group/sg-09b5724e7211b2455",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b5724e7211b2455",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "mongodb",
            "name_prefix": "",
            "owner_id": "563336977955",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mongodb"
            },
            "tags_all": {
              "Name": "mongodb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa8966cac1291480"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instances[\"mysql\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:563336977955:instance/i-021d5a4062d71fc85",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021d5a4062d71fc85",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09803102730212ed5"
              }
            ],
            "primary_network_interface_id": "eni-09803102730212ed5",
            "private_dns": "ip-172-31-92-227.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.92.227",
            "public_dns": "ec2-3-92-237-147.compute-1.amazonaws.com",
            "public_ip": "3.92.237.147",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d327b06c29bcb0cf",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "mysql"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036c550880311293e",
            "tags": {
              "Name": "mysql"
            },
            "tags_all": {
              "Name": "mysql"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06c84b18fd43d94ff"
            ]
          },
          "dependencies": [
            "module.instances.aws_security_group.sg",
            "module.instances.data.aws_ami.rhel9_devops"
          ]
        }
      ]
    },
    {
      "module": "module.instances[\"mysql\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563336977955:security-group/sg-06c84b18fd43d94ff",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c84b18fd43d94ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "mysql",
            "name_prefix": "",
            "owner_id": "563336977955",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql"
            },
            "tags_all": {
              "Name": "mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa8966cac1291480"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instances[\"payment\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:563336977955:instance/i-0731192770c6f3057",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0731192770c6f3057",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c0a6b14c3dcd3193"
              }
            ],
            "primary_network_interface_id": "eni-0c0a6b14c3dcd3193",
            "private_dns": "ip-172-31-95-134.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.95.134",
            "public_dns": "ec2-3-93-153-96.compute-1.amazonaws.com",
            "public_ip": "3.93.153.96",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eada2afec06082d2",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "payment"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036c550880311293e",
            "tags": {
              "Name": "payment"
            },
            "tags_all": {
              "Name": "payment"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc36cbd2dfb4aef8"
            ]
          },
          "dependencies": [
            "module.instances.aws_security_group.sg",
            "module.instances.data.aws_ami.rhel9_devops"
          ]
        }
      ]
    },
    {
      "module": "module.instances[\"payment\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563336977955:security-group/sg-0cc36cbd2dfb4aef8",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc36cbd2dfb4aef8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "payment",
            "name_prefix": "",
            "owner_id": "563336977955",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "payment"
            },
            "tags_all": {
              "Name": "payment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa8966cac1291480"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instances[\"rabbitmq\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:563336977955:instance/i-02686b15ed469d57f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02686b15ed469d57f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0400478e10f91dc25"
              }
            ],
            "primary_network_interface_id": "eni-0400478e10f91dc25",
            "private_dns": "ip-172-31-94-45.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.94.45",
            "public_dns": "ec2-18-208-180-46.compute-1.amazonaws.com",
            "public_ip": "18.208.180.46",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ba0db4a1de3d3bd6",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "rabbitmq"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036c550880311293e",
            "tags": {
              "Name": "rabbitmq"
            },
            "tags_all": {
              "Name": "rabbitmq"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002a75788cd3aeba3"
            ]
          },
          "dependencies": [
            "module.instances.aws_security_group.sg",
            "module.instances.data.aws_ami.rhel9_devops"
          ]
        }
      ]
    },
    {
      "module": "module.instances[\"rabbitmq\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563336977955:security-group/sg-002a75788cd3aeba3",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002a75788cd3aeba3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "rabbitmq",
            "name_prefix": "",
            "owner_id": "563336977955",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rabbitmq"
            },
            "tags_all": {
              "Name": "rabbitmq"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa8966cac1291480"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instances[\"redis\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:563336977955:instance/i-0e5032c9e4a7ef153",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e5032c9e4a7ef153",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06c0f864db8c59126"
              }
            ],
            "primary_network_interface_id": "eni-06c0f864db8c59126",
            "private_dns": "ip-172-31-95-41.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.95.41",
            "public_dns": "ec2-98-93-161-103.compute-1.amazonaws.com",
            "public_ip": "98.93.161.103",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e5a02dba0d9c6ab1",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "redis"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036c550880311293e",
            "tags": {
              "Name": "redis"
            },
            "tags_all": {
              "Name": "redis"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ebd4bc9c65d6146e"
            ]
          },
          "dependencies": [
            "module.instances.aws_security_group.sg",
            "module.instances.data.aws_ami.rhel9_devops"
          ]
        }
      ]
    },
    {
      "module": "module.instances[\"redis\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563336977955:security-group/sg-0ebd4bc9c65d6146e",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebd4bc9c65d6146e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "redis",
            "name_prefix": "",
            "owner_id": "563336977955",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "redis"
            },
            "tags_all": {
              "Name": "redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa8966cac1291480"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instances[\"shipping\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:563336977955:instance/i-06e301ad95f80f0a5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e301ad95f80f0a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a814c919b1665076"
              }
            ],
            "primary_network_interface_id": "eni-0a814c919b1665076",
            "private_dns": "ip-172-31-90-165.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.90.165",
            "public_dns": "ec2-18-208-169-104.compute-1.amazonaws.com",
            "public_ip": "18.208.169.104",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a422ba926716f38d",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "shipping"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036c550880311293e",
            "tags": {
              "Name": "shipping"
            },
            "tags_all": {
              "Name": "shipping"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d56cfca4b40c77c"
            ]
          },
          "dependencies": [
            "module.instances.aws_security_group.sg",
            "module.instances.data.aws_ami.rhel9_devops"
          ]
        }
      ]
    },
    {
      "module": "module.instances[\"shipping\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563336977955:security-group/sg-01d56cfca4b40c77c",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d56cfca4b40c77c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "shipping",
            "name_prefix": "",
            "owner_id": "563336977955",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shipping"
            },
            "tags_all": {
              "Name": "shipping"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa8966cac1291480"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.instances[\"user\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:563336977955:instance/i-001dc5b257e7fca51",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-001dc5b257e7fca51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cfe8e0507aa9dd4c"
              }
            ],
            "primary_network_interface_id": "eni-0cfe8e0507aa9dd4c",
            "private_dns": "ip-172-31-82-72.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.82.72",
            "public_dns": "ec2-18-207-187-63.compute-1.amazonaws.com",
            "public_ip": "18.207.187.63",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b98973edc7db0d93",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "user"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036c550880311293e",
            "tags": {
              "Name": "user"
            },
            "tags_all": {
              "Name": "user"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002d967ef6203495f"
            ]
          },
          "dependencies": [
            "module.instances.aws_security_group.sg",
            "module.instances.data.aws_ami.rhel9_devops"
          ]
        }
      ]
    },
    {
      "module": "module.instances[\"user\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:563336977955:security-group/sg-002d967ef6203495f",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002d967ef6203495f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "user",
            "name_prefix": "",
            "owner_id": "563336977955",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "user"
            },
            "tags_all": {
              "Name": "user"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa8966cac1291480"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}